Add blast furnace support